--- a/main/Makefile
+++ b/main/Makefile
@@ -3,6 +3,8 @@
 CPPFLAGS=-I../interfaces
 BIN_DIR=../bin
 COMPONENTS_NEEDED=Composant1 Composant2
+COMPONENTS_DIRNAMES=
+
 COMPONENTS_DIR=../lib
 COMPONENTS_FILES=${COMPONENTS_NEEDED:%=${COMPONENTS_DIR}/lib%.so}
 LD_COMPONENTS=${COMPONENTS_NEEDED:%=-l%}
